调整脚本名称信息

--- a/example/index.html
+++ b/example/index.html
@@ -76,7 +76,7 @@
 <script src="jquery.js"></script>
 <script src="http://rap.taobao.org/rap.plugin.js?projectId=4039"></script>
 <script src="vue.js"></script>
-<script src="../src/vue-scroll.js"></script>
+<script src="../src/index.js"></script>
 <script>
 
   Vue.use(window.Scroll)
