--- a/example/index.html
+++ b/example/index.html
@@ -12,43 +12,23 @@
   <meta name="format-detection" content="telephone=no">
   <link type="text/css" rel="stylesheet" href="css/css.css">
   <style>
-    .app{
-      height:250px;
-      border: 1px solid;
-      margin: 5px;
-    }
+
   </style>
 </head>
 <body>
-<div class="app" v-scroll scroll-key="ascroll" scroll-initialize="true" scroll-down="down_a()" scroll-up="up_a()">
+<div class="app" v-drapload drapload-key="ascroll" drapload-initialize="true" drapload-down="down()">
   <div>
-    <div class="item" v-for="item in a">
-      <h1 class="name">{{item.value}}</h1>
-      <div class="desc">{{item.data.description}}</div>
-      <div class="down">{{item.data.url}}</div>
-      <div class="score">{{item.data.suggested_score}}</div>
+    <div class="item" v-for="item in a" @click="click(item.url)">
+      <h1 class="name">{{item.name}}</h1>
+      <div class="desc">{{item.desc}}</div>
     </div>
   </div>
 </div>
-
-<div class="app" v-scroll scroll-key="bscroll" scroll-initialize="true"  scroll-down="down_b()">
-  <div>
-    <div class="item" v-for="item in b">
-      <h1 class="name">{{item.value}}</h1>
-      <div class="desc">{{item.data.description}}</div>
-      <div class="down">{{item.data.url}}</div>
-      <div class="score">{{item.data.suggested_score}}</div>
-    </div>
-  </div>
-</div>
-
 <script src="js/jquery.js"></script>
-<script src="http://rap.taobao.org/rap.plugin.js?projectId=4039"></script>
 <script src="js/vue.js"></script>
 <script src="../src/index.js"></script>
 <script>
 
-  Vue.use(window.Scroll)
 
   var app = new Vue({
     el: 'body',
@@ -56,9 +36,24 @@
       return { a: [], b: [] }
     },
     data: function () {
-      return { a: [], b: [] }
+      return {
+        a: []
+      }
     },
-
+    loadListData: function (fn) {
+      fn([
+        {
+          name: "基础例子",
+          desc: "基础例子",
+          url: "base.html",
+        },
+        {
+          name: "自定义加载效果",
+          desc: "你可以使用自己的配置初始化下拉刷新效果，",
+          url: "config.html",
+        },
+      ])
+    },
     ready: function () {
       var me = this;
       me.$options.vue = me
@@ -67,58 +62,21 @@
      * 加载数据
      * @param fn
      */
-    loadListData: function (fn) {
-      var me = this.vue;
-      $.ajax({
-        url: 'npm',
-        data: {},
-        type: 'GET',
-        success: function (data) {
-
-          // 初始化数据 先获取所有数据并初始化前６条
-          // Initialize the data,get 0-6 data of the array.
-          fn(data.sections.packages)
-        }
-
-      });
-    },
     methods: {
-      down_a: function () {
+      down: function () {
         var me = this
-        //当滚动条距离底部高度等于你在scroll-foot设置的高度时将运行一次此函数
-        //if scrollTop = scroll-foot , function run.
+        //当滚动条距离底部高度等于你在drapload-foot设置的高度时将运行一次此函数
+        //if scrollTop = drapload-foot , function run.
         me.$options.loadListData(function (data) {
-            me.a = me.a.concat(data)
-            me.ascroll.resetload()
+          me.a = me.a.concat(data)
+          me.ascroll.noData()
+          me.ascroll.resetload()
         });
 
       },
-      up_a: function () {
-        var me = this
-        //当滚动条距离底部高度等于你在scroll-top设置的高度时将运行一次此函数
-        //if scrollTop = scroll-top , function run.
-        me.$options.loadListData(function (data) {
-              me.a = data
-              me.ascroll.resetload()
-        });
-      },
-      down_b: function () {
-        var me = this
-        //当滚动条距离底部高度等于你在scroll-foot设置的高度时将运行一次此函数
-        //if scrollTop = scroll-foot , function run.
-        me.$options.loadListData(function (data) {
-          me.b = me.b.concat(data)
-        });
-      },
-      up_b: function () {
-        var me = this
-        //当滚动条距离底部高度等于你在scroll-top设置的高度时将运行一次此函数
-        //if scrollTop = scroll-top , function run.
-        me.$options.loadListData(function (data) {
-            me.b = data
-            me.bscroll.resetload()
-        });
-      },
+      click: function (item) {
+        window.location.href=item
+      }
     }
   })
 </script>
