修改链接以及添加例子

--- a/example/config.html
+++ b/example/config.html
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no">
   <link type="text/css" rel="stylesheet" href="css/css.css">
   <style>
-    .app {
+    body .app {
       height: 250px;
       border: 1px solid;
       margin: 5px;
