--- a/example/config.html
+++ b/example/config.html
@@ -11,7 +11,7 @@
   <meta name="x5-fullscreen" content="true"/>
   <meta name="format-detection" content="telephone=no">
   <link type="text/css" rel="stylesheet" href="css/css.css">
-  <style>
+  <style type="text/css">
     body .app {
       height: 250px;
       border: 1px solid;
